# breeze-wh

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.ko.md  README.md  app.rc  breeze.exe.manifest  build.rs  lefthook.yml  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  constants.rs  error.rs  lib.rs  logging.rs
crates/helper/: Cargo.toml  app.rc  breeze-helper.exe.manifest  build.rs
crates/helper/src/: automator.rs  dialog.rs  handlers.rs  main.rs
crates/service/: Cargo.toml  app.rc  breeze-service.exe.manifest  build.rs
crates/service/src/: main.rs  service.rs  session.rs  supervisor.rs
src/: main.rs
src/cli/: commands.rs  mod.rs
src/common/: config.rs  constants.rs  elevation.rs  logging.rs  mem.rs  mod.rs
src/helper/: automator.rs  dialog.rs  handlers.rs  mod.rs
src/service/: mod.rs  runner.rs  session.rs  supervisor.rs
