[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evan-choi/breeze"
rust-version = "1.85"

[workspace.dependencies]
windows = "0.61"
windows-core = "0.61"
windows-service = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
embed-resource = "3"
ctrlc = "3"
