[package]
name = "breeze-wh"
version = "0.1.3"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/evan-choi/breeze-wh"
description = "Auto-confirm Windows Hello dialogs"
readme = "README.md"
keywords = ["windows-hello", "automation", "windows-service", "biometric"]
categories = ["command-line-utilities", "os::windows-apis"]
rust-version = "1.85"

[dependencies]
windows-core = "0.61"
windows-service = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ctrlc = "3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

[dependencies.windows]
version = "0.61"
features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_RemoteDesktop",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "z"      # optimize for size
lto = true           # link-time optimization
codegen-units = 1    # better cross-crate optimization
strip = true         # strip symbols
panic = "abort"      # smaller binary (no unwinding)
