[package]
name = "breeze-helper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "breeze-helper"
path = "src/main.rs"

[dependencies]
breeze-common = { path = "../common" }
windows-core.workspace = true
anyhow.workspace = true
tracing.workspace = true
ctrlc.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]

[build-dependencies]
embed-resource.workspace = true
