[package]
name = "breeze-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "breeze-service"
path = "src/main.rs"

[dependencies]
breeze-common = { path = "../common" }
windows-core.workspace = true
windows-service.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
]

[build-dependencies]
embed-resource.workspace = true
